--- a/.golangci.yml
+++ b/.golangci.yml
@@ -50,7 +50,7 @@ linters-settings:
   gocyclo:
     min-complexity: 30
   goimports:
-    local-prefixes: arhat.dev/kubectl-aranya-pf
+    local-prefixes: arhat.dev/kubectl-aranya
   lll:
     line-length: 120
     # tab width in spaces. Default to 1.
